# internal/application/identity/handlers/create_user_command.go
@@ -7,13 +7,16 @@ import (
 	"github.com/RafaelSKaturabara/Flickly/internal/domain/core/mediator"
 	"github.com/RafaelSKaturabara/Flickly/internal/domain/identity/entities"
 	"github.com/RafaelSKaturabara/Flickly/internal/domain/identity/repositories"
+	"github.com/RafaelSKaturabara/Flickly/internal/domain/identity/valueobjects"
 	"github.com/RafaelSKaturabara/Flickly/internal/infra/crosscutting/utilities"
+	"github.com/google/uuid"
 )
 
 type CreateUserCommand struct {
-	Name     string `json:"name"`
-	Email    string `json:"email"`
-	Password string `json:"-"` // Senha não é serializada em JSON
+	Name     string
+	Email    string
+	Password string // Senha não é serializada em JSON
+	ClientID uuid.UUID
 }
 
 type CreateUserCommandHandler struct {
@@ -30,12 +33,15 @@ func NewCreateUserCommandHandler(serviceCollection utilities.IServiceCollection)
 
 func (h *CreateUserCommandHandler) Handle(c context.Context, request mediator.Request) (mediator.Response, error) {
 	command := request.(CreateUserCommand)
-	password, err := utilities.Encrypt(command.Password)
+	passwordHash, err := valueobjects.NewPasswordHash(command.Password)
 	if err != nil {
 		return nil, err
 	}
 
-	user := entities.NewUser(command.Name, command.Email, "ClientID", "ClientSecret", password)
+	// Get Default UserAccess
+	panic("not implemented UserAccess")
+
+	user := entities.NewUser(command.Name, command.Email, passwordHash, nil)
 	err = h.userRepository.Create(user)
 	if err != nil {
 		return nil, core.ErrUserAlreadyExist(err)
