# internal/infra/data/identity/gormmappings/userdb.go
@@ -1,25 +1,22 @@
 package gormmappings
 
 import (
+	"github.com/RafaelSKaturabara/Flickly/internal/domain/core"
 	"github.com/RafaelSKaturabara/Flickly/internal/domain/identity/entities"
+	"github.com/RafaelSKaturabara/Flickly/internal/domain/identity/valueobjects"
 	"github.com/jinzhu/copier"
 	"gorm.io/gorm"
 )
 
 type UserDB struct {
-	entities.User `gorm:"embedded"`
-	Email         string          `gorm:"column:email;size:255;unique;not null"`
-	Name          string          `gorm:"column:name;size:255;not null"`
-	Password      string          `gorm:"column:password;size:255;not null"`
-	Picture       string          `gorm:"column:picture;size:1024"`
-	VerifiedEmail bool            `gorm:"column:verified_email"`
-	Roles         []entities.Role `gorm:"column:roles;type:text;serializer:json"`
-	AccessToken   string          `gorm:"column:access_token;size:2048"`
-	TokenType     string          `gorm:"column:token_type;size:50"`
-	TokenExpiry   int64           `gorm:"column:token_expiry"`
-	TokenScopes   []string        `gorm:"column:token_scopes;type:text;serializer:json"`
-	ClientID      string          `gorm:"column:client_id;size:255"`
-	ClientSecret  string          `gorm:"column:client_secret;size:255"`
+	core.BaseEntity `gorm:"embedded"`
+	Email           string                    `gorm:"column:email;uniqueIndex;size:255;not null"`
+	Name            string                    `gorm:"column:name;size:1024;not null"`
+	PasswordHash    valueobjects.PasswordHash `gorm:"column:password_hash"`
+	Picture         string                    `gorm:"column:picture;size:2048"`
+	VerifiedEmail   bool                      `gorm:"column:verified_email;default:false"`
+	UserAccesses    []UserAccessDB            `gorm:"foreignKey:UserID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE"`
+	AccessToken     string                    `gorm:"-"`
 }
 
 func (UserDB) TableName() string {
