# internal/infra/data/identity/repositories/userrepository.go
@@ -2,13 +2,10 @@ package repositories
 
 import (
 	"context"
-
-	"github.com/RafaelSKaturabara/Flickly/internal/domain/identity/entities"
-	"github.com/RafaelSKaturabara/Flickly/internal/domain/identity/repositories"
-	"github.com/RafaelSKaturabara/Flickly/internal/infra/crosscutting/utilities"
+	domainRepositories "github.com/RafaelSKaturabara/Flickly/internal/domain/identity/repositories"
 	"github.com/RafaelSKaturabara/Flickly/internal/infra/data/core"
+	"github.com/RafaelSKaturabara/Flickly/internal/domain/identity/entities"
 	"github.com/RafaelSKaturabara/Flickly/internal/infra/data/identity/gormmappings"
-	"github.com/google/uuid"
 	"gorm.io/gorm"
 )
 
@@ -16,53 +13,26 @@ type UserRepository struct {
 	core.GormRepository[entities.User, gormmappings.UserDB]
 }
 
-func NewUserRepository(dbe *gorm.DB) *UserRepository {
+func NewUserRepository(db *gorm.DB) domainRepositories.IUserRepository {
 	return &UserRepository{
-		core.GormRepository[entities.User, gormmappings.UserDB](*core.NewGormRepository[entities.User, gormmappings.UserDB](dbe)),
+		core.GormRepository[entities.User, gormmappings.UserDB](*core.NewGormRepository[entities.User, gormmappings.UserDB](db)),
 	}
 }
 
 func (r *UserRepository) GetUserByEmail(ctx context.Context, email string) (*entities.User, error) {
-	var model gormmappings.UserDB
-	err := r.DB.WithContext(ctx).First(&model, "email = ?", email).Error
-	if err != nil {
-		if err == gorm.ErrRecordNotFound {
-			return nil, repositories.ErrUserNotFound
-		}
+	var result entities.User
+	if err := r.DB.Where("email = ?", email).First(&result).Error; err != nil {
 		return nil, err
 	}
-	domain := model.ToDomain()
-	return &domain, nil
+	return &result, nil
 }
 
-func (r *UserRepository) GetUserByEmailAndPasswordAndClientAndSecret(ctx context.Context, email, password, clientID, clientSecret string) (*entities.User, error) {
-	var model gormmappings.UserDB
-	err := r.DB.WithContext(ctx).First(&model, "email = ? AND client_id = ? AND client_secret = ?", email, clientID, clientSecret).Error
-	if err != nil {
-		if err == gorm.ErrRecordNotFound {
-			return nil, repositories.ErrUserNotFound
-		}
+func (r *UserRepository) GetUserByEmailAndPasswordAndClient(ctx context.Context, email, password, clientID string) (*entities.User, error) {
+	var result entities.User
+
+	panic("query com client id")
+	if err := r.DB.Where("email = ? AND password = ? AND client_id = ?", email, password, clientID).First(&result).Error; err != nil {
 		return nil, err
 	}
-
-	if utilities.CompareHashAndPassword(model.Password, password) != nil {
-		return nil, repositories.ErrUserNotFound
-	}
-
-	domain := model.ToDomain()
-	return &domain, nil
-}
-
-func (r *UserRepository) UpdateUserOAuthInfo(ctx context.Context, userID uuid.UUID, accessToken, refreshToken string, tokenExpiry int64, scopes []string) error {
-	return r.DB.WithContext(ctx).Model(&gormmappings.UserDB{}).Where("id = ?", userID).Updates(&gormmappings.UserDB{
-		AccessToken: accessToken,
-		TokenExpiry: tokenExpiry,
-		TokenScopes: scopes,
-	}).Error
-}
-
-func (r *UserRepository) UpdateUserRoles(ctx context.Context, userID uuid.UUID, roles []entities.Role) error {
-	return r.DB.WithContext(ctx).Model(&gormmappings.UserDB{}).Where("id = ?", userID).Updates(&gormmappings.UserDB{
-		Roles: roles,
-	}).Error
+	return &result, nil
 }
